--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,11 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "typescript": "^5.3.3",
+        "vite": "^4.0.0",
+        "vue-router": "^4.3.0"
+    },
+    "dependencies": {
+        "ts-loader": "^9.5.1"
     }
 }
