--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,8 +1,12 @@
 {
-    "compilerOptions": {
+  "compilerOptions": {
       "target": "es5",
-      "strict": true,
-      "module": "es2015",
-      "moduleResolution": "node"
-    }
-  }
+      "module": "es2020",
+      "moduleResolution": "node",
+      "baseUrl": "./",
+      "strict": true,         // Enable strict type-checking options
+      "skipLibCheck": true,   // Skip type checking of declaration files
+      "noImplicitAny": false  // Bypass raising errors on `any` type
+  },
+  "include": ["resources/js/**/*"] // Frontend paths pattern
+}
