--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,12 @@
         "vue-router": "^4.3.0"
     },
     "dependencies": {
-        "ts-loader": "^9.5.1"
+        "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+        "bootstrap": "^5.3.3",
+        "chart.js": "^3.9.1",
+        "sass": "^1.71.1",
+        "ts-loader": "^9.5.1",
+        "vue-chart-3": "^3.1.8",
+        "vue-social-sharing": "^4.0.0-alpha4"
     }
 }
